--- a/public/minimal/index.html
+++ b/public/minimal/index.html
@@ -23,7 +23,7 @@
   <div class="form">
     <div class="form-header">
       <h1>
-        Kale Krate
+        Kale Krate hello
       </h1>
     </div>
     <div class="form-bar">
